# nl2jq

./: .gitignore  README.md  pyproject.toml  requirements-train.txt  requirements.txt
bench/: apply_review.py  audit_coverage.py  baseline_results.json  baselines.py  build_frozen.py  build_seed.py  cli_smoke.py  curate.py  diagnose.py  diagnose_baseline.py  eval_ckpts.py  eval_frozen.py  eval_qwen.py  harness.py  nl2jq-bench.jsonl  run.py  score_oracle.py  seed_tasks.py  seed_tasks_ext.py  seed_tasks_hard.py  validate_novelty.py
bench/devnovel/: devnovel-v1.jsonl
bench/frozen/: FREEZE.txt  GRAMMAR_AT_FREEZE.txt  RESULTS.md  bench_field_exclusions.json  nl2jq-bench-1.0.0.jsonl  vtrain-v1.json
bench/sealed/: nl2jq-bench-sealed-v1.jsonl.enc
cli/: decoding.py  jqgen.py
grammars/: jq.gbnf
pipeline/: build_dataset.py  build_parallel.py  common.py  documents.py  execute.py  generate.py  grammar.py  grammar_ext.py  grammar_t5.py  paraphrase.py  schemas.py  shape.py  wordpool_v7.json
pod/: chain6.sh  chain8.sh  gen_oracle.py  gen_preds.py  pipe4_fast.sh  pipe4_full.sh  pipe5_fast.sh  pipe6.sh  qwen35_v7.sh  qwen_eval.sh  qwen_eval2.sh  qwen_v4.sh  qwen_v5.sh  qwen_v6.sh
release/: BENCH_CARD.md  DATASET_CARD.md  MODEL_CARD.md  MODEL_CARD_QWEN.md  MODEL_CARD_QWEN2B.md  space_app.py  to_hf.py  upload.py
release/eval_json/: eval_06b.json  eval_2b.json  eval_40m.json
release/space_files/: README.md  requirements.txt
train/: data.py  eval_exec.py  finetune_qwen.py  merge_qwen.py  model.py  tokenizer.py  train.py
