[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "jqgen"
version = "0.1.0"
description = "Natural language to jq, running locally. Powered by the nl2jq small language models."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "gauthierpiarrette" }]
keywords = ["jq", "json", "nl2jq", "code-generation", "cli", "small-language-model"]
dependencies = [
    "torch>=2.1",
    "transformers>=4.44",
    "huggingface_hub>=0.24",
]

[project.scripts]
jqgen = "cli.jqgen:main"

[project.urls]
Repository = "https://github.com/gauthierpiarrette/nl2jq"
Model = "https://huggingface.co/gauthierpiarrette/nl2jq-40m"
Dataset = "https://huggingface.co/datasets/gauthierpiarrette/nl2jq"
Benchmark = "https://huggingface.co/datasets/gauthierpiarrette/nl2jq-bench"

# Only the packages the CLI needs at runtime; the training/pipeline internals are not
# published as an importable API. jq itself is found on PATH (or the bundled bin/jq).
[tool.setuptools]
packages = ["cli", "pipeline"]

[tool.setuptools.package-data]
pipeline = ["wordpool_v7.json"]
